tests/iterable/iterable.exp
Error: array.js:7
  7: (["hi"]: Iterable<number>); // Error string ~> number
       ^^^^ string. This type is incompatible with
  7: (["hi"]: Iterable<number>); // Error string ~> number
                       ^^^^^^ number

Error: array.js:8
  8: (["hi", 1]: Iterable<string>); // Error number ~> string
             ^ number. This type is incompatible with
  8: (["hi", 1]: Iterable<string>); // Error number ~> string
                          ^^^^^^ string

Error: caching_bug.js:21
 21: function miss_the_cache(x: Array<string | number>): Iterable<string> { return x; }
                                               ^^^^^^ number. This type is incompatible with
 21: function miss_the_cache(x: Array<string | number>): Iterable<string> { return x; }
                                                                  ^^^^^^ string

Error: iterator_result.js:23
 23:         return { done, value: "still going..." }; // Error string ~> void
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
494:   | { done: false, value: Yield };
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/core.js:494
  Property `done` is incompatible:
     23:         return { done, value: "still going..." }; // Error string ~> void
                          ^^^^ boolean. Expected boolean literal `false`, got `true` instead
    494:   | { done: false, value: Yield };
                     ^^^^^ boolean literal `false`. See lib: <BUILTINS>/core.js:494

Error: iterator_result.js:25
 25:         return { done }; // Error void ~> string
                    ^^^^^^^^ object literal. This type is incompatible with
493:   | { done: true, value?: Return }
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/core.js:493
  Property `done` is incompatible:
     25:         return { done }; // Error void ~> string
                          ^^^^ boolean. Expected boolean literal `true`, got `false` instead
    493:   | { done: true, value?: Return }
                     ^^^^ boolean literal `true`. See lib: <BUILTINS>/core.js:493

Error: map.js:13
 13: function mapTest4(map: Map<number, string>): Iterable<string> {
                                                           ^^^^^^ string. This type is incompatible with
541:     @@iterator(): Iterator<[K, V]>;
                                ^^^^^^ tuple type. See lib: <BUILTINS>/core.js:541

Error: set.js:13
 13: function setTest4(set: Set<string>): Iterable<number> {
                                ^^^^^^ string. This type is incompatible with
 13: function setTest4(set: Set<string>): Iterable<number> {
                                                   ^^^^^^ number

Error: string.js:5
  5: ("hi": Iterable<number>); // Error - string is a Iterable<string>
                     ^^^^^^ number. This type is incompatible with
288:     @@iterator(): Iterator<string>;
                                ^^^^^^ string. See lib: <BUILTINS>/core.js:288


Found 8 errors
